# airthings-exporter

./: pyproject.toml  requirements.txt
src/airthings/: CloudCollector.py  main.py
