[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "airthings-exporter"
version = "0.0.1"
description = "Prometheus exporter for Airthings devices"
dependencies = [
    "prometheus_client == 0.22.1",
    "requests == 2.32.4",
]

[project.scripts]
airthings-exporter = "airthings.main:main"

[tool.setuptools.packages.find]
where = ["src"]
